gcc/testsuite/rust/rustc/ui/invalid/invalid-no-sanitize.rs
#![feature(no_sanitize)]

#[no_sanitize(brontosaurus)] // { dg-error "" "" { target *-*-* } }
fn main() {
}

